# ciab

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  config.agentcy.toml  config.example.toml  index.html  install.sh  sitemap.xml  workspace.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
agent-providers/: index.html
agent-providers/claude-code/: index.html
agent-providers/codex/: index.html
agent-providers/cursor/: index.html
agent-providers/custom-provider/: index.html
agent-providers/gemini/: index.html
api-reference/: index.html
api-reference/credentials/: index.html
api-reference/exec/: index.html
api-reference/files/: index.html
api-reference/images/: index.html
api-reference/oauth/: index.html
api-reference/sandboxes/: index.html
api-reference/sessions/: index.html
api-reference/streaming/: index.html
api-reference/workspaces/: index.html
architecture/: index.html
architecture/crate-map/: index.html
architecture/provisioning-pipeline/: index.html
architecture/rust-library/: index.html
architecture/sandbox-lifecycle/: index.html
architecture/streaming/: index.html
cli-reference/: index.html
cli-reference/agent/: index.html
cli-reference/config/: index.html
cli-reference/credential/: index.html
cli-reference/files/: index.html
cli-reference/image/: index.html
cli-reference/oauth/: index.html
cli-reference/sandbox/: index.html
cli-reference/server/: index.html
cli-reference/session/: index.html
cli-reference/workspace/: index.html
configuration/: index.html
configuration/environment-variables/: index.html
contributing/: index.html
crates/ciab/: Cargo.toml
crates/ciab-agent-claude/: Cargo.toml
crates/ciab-agent-codex/: Cargo.toml
crates/ciab-agent-codex/src/: lib.rs
crates/ciab-agent-cursor/: Cargo.toml
crates/ciab-agent-gemini/: Cargo.toml
crates/ciab-agent-gemini/src/: lib.rs
crates/ciab-api/: Cargo.toml
crates/ciab-api/src/: lib.rs  ollama.rs  permission_gate.rs  reconciler.rs  router.rs  state.rs
crates/ciab-api/src/middleware/: auth.rs  mod.rs  tracing_mw.rs
crates/ciab-api/src/routes/: agents.rs  channels.rs  credentials.rs  exec.rs  files.rs  gateway.rs  health.rs  hooks.rs  images.rs  llm_providers.rs  mod.rs  oauth.rs  permissions.rs  sandboxes.rs  sessions.rs  skills.rs  templates.rs  workspaces.rs
crates/ciab-channels/: Cargo.toml
crates/ciab-channels/src/: lib.rs  router.rs
crates/ciab-channels/src/adapters/: mod.rs  slack.rs  webhook.rs  whatsapp.rs
crates/ciab-cli/: Cargo.toml
crates/ciab-cli/src/: cli.rs  client.rs  main.rs  output.rs
crates/ciab-cli/src/commands/: agent.rs  config.rs  credential.rs  files.rs  gateway.rs  image.rs  mod.rs  oauth.rs  sandbox.rs  server.rs  session.rs  workspace.rs
crates/ciab-core/: Cargo.toml  config.default.toml
crates/ciab-core/src/: error.rs  lib.rs  resolve.rs
crates/ciab-core/src/traits/: agent.rs  channel.rs  image_builder.rs  mod.rs  runtime.rs  stream.rs
crates/ciab-core/src/types/: agent.rs  channel.rs  config.rs  credentials.rs  image.rs  llm_provider.rs  mod.rs  sandbox.rs  session.rs  stream.rs  workspace.rs
crates/ciab-credentials/: Cargo.toml
crates/ciab-credentials/src/: injection.rs  lib.rs  oauth2_flow.rs  vault.rs
crates/ciab-credentials/src/providers/: aws.rs  gcp.rs  github.rs  mod.rs
crates/ciab-db/: Cargo.toml
crates/ciab-db/src/: channel_repo.rs  credential_repo.rs  gateway_repo.rs  lib.rs  llm_provider_repo.rs  message_repo.rs  migrations.rs  sandbox_repo.rs  session_repo.rs  workspace_repo.rs
crates/ciab-gateway/: Cargo.toml
crates/ciab-gateway/src/: lib.rs  types.rs
crates/ciab-gateway/src/lan/: mod.rs
crates/ciab-gateway/src/proxy/: mod.rs
crates/ciab-gateway/src/tokens/: mod.rs
crates/ciab-gateway/src/tunnel/: bore.rs  cloudflare.rs  frp.rs  mod.rs  ngrok.rs  provider.rs
crates/ciab-packer/: Cargo.toml
crates/ciab-packer/src/: builder.rs  lib.rs  template.rs
crates/ciab-provisioning/: Cargo.toml
crates/ciab-provisioning/src/: agentfs.rs  git.rs  lib.rs  local_mount.rs  pipeline.rs  scripts.rs
crates/ciab-sandbox/: Cargo.toml
crates/ciab-sandbox-ec2/: Cargo.toml
crates/ciab-sandbox-ec2/src/: lib.rs  runtime.rs  ssh.rs
crates/ciab-sandbox-k8s/: Cargo.toml
crates/ciab-sandbox-k8s/src/: config.rs  error.rs  exec.rs  lib.rs  logs.rs  pod_builder.rs  pvc.rs  rbac.rs  runtime.rs
crates/ciab-sandbox/src/: client.rs  execd.rs  lib.rs  local.rs  runtime.rs
crates/ciab-streaming/: Cargo.toml
crates/ciab-streaming/src/: broker.rs  buffer.rs  lib.rs  sse.rs  websocket.rs
crates/ciab/src/: engine.rs  lib.rs
deployment/: index.html
deployment/docker/: index.html
deployment/ec2/: index.html
deployment/kubernetes/: index.html
deployment/mobile-access/: index.html
deployment/opensandbox/: index.html
deployment/packer/: index.html
deployment/production/: index.html
desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  globals.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: awesome-list-submissions.md  mkdocs.yml  show-hn-draft.md
docs/docs/: index.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
helm/ciab/: Chart.yaml  values.yaml
images/claude-sandbox/: Dockerfile
images/codex-sandbox/: Dockerfile
images/cursor-sandbox/: Dockerfile
images/gemini-sandbox/: Dockerfile
search/: search_index.json
templates/packer/: default-ec2.pkr.hcl
tests/integration/: Cargo.toml  main.rs
workspaces/: index.html
workspaces/agent-config/: index.html
workspaces/binaries/: index.html
workspaces/credentials/: index.html
(+161 files in other folders)
