[workspace]
resolver = "2"
members = [
    "crates/ciab-core",
    "crates/ciab-db",
    "crates/ciab-streaming",
    "crates/ciab-sandbox",
    "crates/ciab-sandbox-k8s",
    "crates/ciab-sandbox-ec2",
    "crates/ciab-agent-claude",
    "crates/ciab-agent-codex",
    "crates/ciab-agent-gemini",
    "crates/ciab-agent-cursor",
    "crates/ciab-credentials",
    "crates/ciab-provisioning",
    "crates/ciab-gateway",
    "crates/ciab-channels",
    "crates/ciab-packer",
    "crates/ciab",
    "crates/ciab-api",
    "crates/ciab-cli",
    "tests/integration",
    "desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/shakedaskayo/ciab"
homepage = "https://shakedaskayo.github.io/ciab"
documentation = "https://shakedaskayo.github.io/ciab"
description = "Manage coding agent sandboxes with a single API"
keywords = ["sandbox", "agent", "claude", "codex", "devtools"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dashmap = "6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
oauth2 = "5"
aes-gcm = "0.10"
comfy-table = "7"
bytes = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Internal crates
ciab-core = { version = "0.1.0", path = "crates/ciab-core" }
ciab-db = { version = "0.1.0", path = "crates/ciab-db" }
ciab-streaming = { version = "0.1.0", path = "crates/ciab-streaming" }
ciab-sandbox = { version = "0.1.0", path = "crates/ciab-sandbox" }
ciab-sandbox-k8s = { version = "0.1.0", path = "crates/ciab-sandbox-k8s" }
ciab-sandbox-ec2 = { version = "0.1.0", path = "crates/ciab-sandbox-ec2" }
ciab-agent-claude = { version = "0.1.0", path = "crates/ciab-agent-claude" }
ciab-agent-codex = { version = "0.1.0", path = "crates/ciab-agent-codex" }
ciab-agent-gemini = { version = "0.1.0", path = "crates/ciab-agent-gemini" }
ciab-agent-cursor = { version = "0.1.0", path = "crates/ciab-agent-cursor" }
ciab-credentials = { version = "0.1.0", path = "crates/ciab-credentials" }
ciab-provisioning = { version = "0.1.0", path = "crates/ciab-provisioning" }
ciab-gateway = { version = "0.1.0", path = "crates/ciab-gateway" }
ciab-channels = { version = "0.1.0", path = "crates/ciab-channels" }
ciab-packer = { version = "0.1.0", path = "crates/ciab-packer" }
ciab = { version = "0.1.0", path = "crates/ciab" }
ciab-api = { version = "0.1.0", path = "crates/ciab-api" }
ciab-cli = { version = "0.1.0", path = "crates/ciab-cli" }
