[package]
name = "ciab-agent-gemini"
version = "0.1.0"
edition = "2021"

[dependencies]
ciab-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
