[package]
name = "ciab-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ciab-core = { workspace = true }
ciab-db = { workspace = true }
ciab-streaming = { workspace = true }
ciab-sandbox = { workspace = true }
ciab-credentials = { workspace = true }
ciab-provisioning = { workspace = true }
ciab-gateway = { workspace = true }
ciab-channels = { workspace = true }
ciab-agent-claude = { workspace = true }
ciab-agent-codex = { workspace = true }
ciab-agent-gemini = { workspace = true }
ciab-agent-cursor = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
