[package]
name = "ciab-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
dirs-next = "2"
reqwest = { workspace = true }
git2 = "0.19"
tempfile = "3"
