[package]
name = "ciab-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, traits, and errors for CIAB"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
axum = { workspace = true }
dirs-next = "2"
reqwest = { workspace = true }
git2 = "0.19"
tempfile = "3"
