[package]
name = "ciab-credentials"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Encrypted credential store and OAuth2 for CIAB"

[dependencies]
ciab-core = { workspace = true }
ciab-db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
