[package]
name = "ciab-packer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HashiCorp Packer image builder for CIAB"

[dependencies]
ciab-core = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
tempfile = "3"
