[package]
name = "ciab-provisioning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sandbox provisioning pipeline for CIAB"

[dependencies]
ciab-core = { workspace = true }
ciab-sandbox = { workspace = true }
ciab-credentials = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
