[package]
name = "ciab-sandbox-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ciab-core = { workspace = true }
kube = { version = "0.98", features = ["runtime", "client", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_30"] }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
