[package]
name = "ciab-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
ciab-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
