[package]
name = "ciab-desktop"
version = "0.1.0"
edition = "2021"
description = "CIAB Desktop Application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"

[lib]
name = "ciab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
